[tool.poetry]
name = "dxfeed"
version = "0.2.0"
description = "DXFeed Python API via C API"
authors = ["Index Management Team <im@dxfeed.com>"]
build = "build.py"
license = "MPL-2.0"
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta",
               "Operating System :: Microsoft :: Windows",
               "Operating System :: POSIX :: Linux",
               "Operating System :: MacOS",
               "Programming Language :: Cython",
               "Programming Language :: Python :: 3 :: Only",
               "Topic :: Office/Business :: Financial",
               "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
               "Natural Language :: English"]

include = ["LICENSE", "dxfeed/**/*.c"]
exclude = ["dxfeed/dxfeed-c-api/wrappers*",
           "dxfeed/dxfeed-c-api/tests*",
           "dxfeed/dxfeed-c-api/scripts*",
           "dxfeed/dxfeed-c-api/lib*",
           "dxfeed/dxfeed-c-api/docs*",
           "dxfeed/dxfeed-c-api/.github*"]

[tool.poetry.urls]
"Source code" = "https://github.com/dxFeed/dxfeed-python-api"
"Documentation" = "https://docs.dxfeed.com/python/index.html"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.1"

[tool.poetry.dev-dependencies]
cython = "^0.29.13"
taskipy = "^1.1.3"
pytest = "^5.3.5"
sphinx = "^2.4.4"
toml = "^0.10.0"
sphinx_rtd_theme = "^0.4.3"


[tool.taskipy.tasks]
clear = "find dxfeed/core -type f \\( -iname \\*.c -o -iname \\*.cpp -o -iname \\*.pyd -o -iname \\*.so \\) -delete"
build = "python build.py && poetry build"
html_docs = "make html -C docs"
test =  "pytest tests"
post_build = "task clear"
post_test = "task clear"


[build-system]
requires = ["poetry>=0.12", "cython"]
build-backend = "poetry.masonry.api"