[tool.poetry]
name = 'dxfeed'
version = '0.5.3'
description = 'DXFeed Python API via C API'
authors = ['Index Management Team <im@dxfeed.com>']
build = 'build.py'
license = 'MPL-2.0'
readme = 'README.md'
classifiers = ['Development Status :: 4 - Beta',
               'Operating System :: Microsoft :: Windows',
               'Operating System :: POSIX :: Linux',
               'Operating System :: MacOS',
               'Programming Language :: Cython',
               'Programming Language :: Python :: 3 :: Only',
               'Programming Language :: Python :: 3.6',
               'Programming Language :: Python :: 3.7',
               'Programming Language :: Python :: 3.8',
               'Programming Language :: Python :: 3.9',
               'Topic :: Office/Business :: Financial',
               'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
               'Natural Language :: English']

include = ['LICENSE']
exclude = ['dxfeed/tmp*']

[tool.poetry.urls]
'Source code' = 'https://github.com/dxFeed/dxfeed-python-api'
'Documentation' = 'https://dxfeed.readthedocs.io/en/latest/'

[tool.poetry.dependencies]
python = '^3.6'
pandas = [{version = '>=1.0,!=1.1.5,<1.2', python = '>=3.6.1,<3.7'}, {version = '^1.0.0', python = '^3.7'}]
toml = '^0.10.2'
# The following dependencies are used for docs generation when installed as extras
# (e.g. pip install nornir[docs])
# Currently they have to be specified as non-dev dependencies with optional = true
# Refer to: https://github.com/sdispater/poetry/issues/129
# Issue to watch for: https://github.com/python-poetry/poetry/issues/1644
jupyter = { version = '^1.0.0', optional = true }
cython = { version = '^0.29.14', optional = true }

[tool.poetry.dev-dependencies]
cython = '^0.29.14'
taskipy = '^1.8.1'
pytest = '^6.2.4'
sphinx = '^4.1.2'
sphinx_rtd_theme = '^0.5.2'
pygments = '^2.10'

[tool.poetry.extras]
docs = ['jupyter', 'cython']

[tool.taskipy.tasks]
clear = 'python clear.py'
build = 'python build.py && poetry build'
build_inplace = 'python -c "from build import *; build_extensions()"'
html_docs = 'make html -C docs'
test =  'pytest tests'
post_build = 'task clear'
post_test = 'task clear'

[build-system]
requires = ['poetry_core>=1.0.0', 'setuptools>=57.4.0', 'cython', 'toml>=0.10.2']
build-backend = 'poetry.core.masonry.api'

[build.native-dependencies]
dxfeed_c_api = '8.3.0'
# The URL template for zipped dxFeed C API bundle. Parameters used:
#   {version} - The C API version
#   {os}      - The target OS
dxfeed_c_api_bundle_url_template = 'https://github.com/dxFeed/dxfeed-c-api/releases/download/{version}/dxfeed-c-api-{version}-{os}-no-tls.zip'
